--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,48 @@
 buildscript {
-    ext {
-        compose_version = '1.2.0'
+
+    //project
+    ext.build_gradle = '7.4.1'
+    ext.kotlin_gradle = '1.8.10'
+
+    //android
+    ext.compose_version = '1.4.0'
+    ext.activity_compose_version = '1.7.0'
+    ext.compose_material_3 = '1.0.1'
+    ext.androidx_core = '1.7.0'
+    ext.lifecycle = '2.3.1'
+    ext.excuseMe = '0.9.5'
+
+    //core
+    ext.hilt = '2.40.1'
+    ext.coroutines = '1.5.2'
+
+    ext.coil = '2.2.2'
+
+    //networking
+    ext.okhttp = '4.9.1'
+    ext.retrofit = '2.9.0'
+
+    //storage
+    ext.room = '2.4.2'
+
+    //test
+    ext.junit = '4.13.2'
+    ext.junitExt = '1.1.3'
+    ext.espresso = '3.4.0'
+    ext.mockitoKotlin = '2.2.0'
+
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.4.2' apply false
-    id 'com.android.library' version '7.4.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+    dependencies {
+        classpath "com.android.tools.build:gradle:$build_gradle"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_gradle"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt"
+    }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
