--- a/settings.gradle
+++ b/settings.gradle
@@ -3,12 +3,16 @@ pluginManagement {
         google()
         mavenCentral()
         gradlePluginPortal()
+        maven { setUrl("https://jitpack.io") }
+        mavenCentral()
     }
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
+        mavenCentral()
+        maven { setUrl("https://jitpack.io") }
         mavenCentral()
     }
 }
