Update storage gradle, add README.md

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -24,6 +24,7 @@ android {
 }
 
 dependencies {
+    api project('::storage')
 
     implementation "com.google.dagger:hilt-android:$rootProject.hilt"
     kapt "com.google.dagger:hilt-compiler:$rootProject.hilt"
