Configure playground for compose usage

--- a/.gitignore
+++ b/.gitignore
@@ -321,3 +321,5 @@ Thumbs.db
 !/gradle/wrapper/gradle-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/android,androidstudio,intellij,kotlin
+
+playground
