Add implementation inside uicomponents

--- a/uicomponents/build.gradle
+++ b/uicomponents/build.gradle
@@ -35,6 +35,7 @@ android {
 }
 
 dependencies {
+    implementation project('::domain')
 
     implementation "androidx.core:core-ktx:$rootProject.androidx_core"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$rootProject.lifecycle"
