--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     //android
     ext.compose_version = '1.4.0'
     ext.activity_compose_version = '1.7.0'
-    ext.compose_material_3 = '1.0.1'
+    ext.compose_material = '1.4.0'
     ext.androidx_core = '1.9.0'
     ext.lifecycle = '2.3.1'
     ext.excuseMe = '0.9.5'
