--- a/uicomponents/build.gradle
+++ b/uicomponents/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     implementation "androidx.activity:activity-compose:$rootProject.activity_compose_version"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation "androidx.compose.material3:material3:$rootProject.compose_material_3"
+    implementation "androidx.compose.material:material:$rootProject.compose_material"
     implementation "io.coil-kt:coil-compose:$rootProject.coil"
 
     implementation "com.google.dagger:hilt-android:$rootProject.hilt"
