--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,19 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'dagger.hilt.android.plugin'
     id "org.jlleitschuh.gradle.ktlint" version "11.0.0"
+    id 'com.google.devtools.ksp' version '1.8.0-1.0.9'
+}
+
+kotlin {
+   sourceSets {
+        debug {
+            kotlin.srcDir("build/generated/ksp/debug/kotlin")
+        }
+
+       release {
+           kotlin.srcDir("build/generated/ksp/release/kotlin")
+       }
+    }
 }
 
 android {
@@ -86,4 +99,7 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$rootProject.compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$rootProject.compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$rootProject.compose_version"
+
+    implementation "io.github.raamcosta.compose-destinations:core:$navigation_compose"
+    ksp "io.github.raamcosta.compose-destinations:ksp:$navigation_compose"
 }
