--- a/playground/build.gradle
+++ b/playground/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$rootProject.hilt"
     kapt "com.google.dagger:hilt-compiler:$rootProject.hilt"
     implementation "com.github.AraujoJordan:ExcuseMe:$rootProject.excuseMe"
+    implementation "androidx.constraintlayout:constraintlayout-compose:$compose_constraint"
 
     testImplementation "junit:junit:$rootProject.junit"
     androidTestImplementation "androidx.test.ext:junit:$rootProject.junitExt"
