--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,7 @@ dependencies {
     implementation "androidx.activity:activity-compose:$rootProject.activity_compose_version"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.constraintlayout:constraintlayout-compose:$compose_constraint"
+    implementation "me.saket.swipe:swipe:$compose_swipe"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.material:material:$rootProject.compose_material"
     implementation "io.coil-kt:coil-compose:$rootProject.coil"
