Connect home screen to viewmodel

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,12 +84,17 @@ dependencies {
     implementation "androidx.core:core-ktx:$rootProject.androidx_core"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$rootProject.lifecycle"
     implementation "androidx.activity:activity-compose:$rootProject.activity_compose_version"
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.constraintlayout:constraintlayout-compose:$compose_constraint"
-    implementation "me.saket.swipe:swipe:$compose_swipe"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.ui:ui:$rootProject.compose_version"
+    implementation "androidx.constraintlayout:constraintlayout-compose:$rootProject.compose_constraint"
+    implementation "me.saket.swipe:swipe:$rootProject.compose_swipe"
+    implementation "androidx.compose.ui:ui-tooling-preview:$rootProject.compose_version"
     implementation "androidx.compose.material:material:$rootProject.compose_material"
     implementation "io.coil-kt:coil-compose:$rootProject.coil"
+    implementation "androidx.compose.runtime:runtime-livedata:$rootProject.compose_version"
+
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:$rootProject.lifecycle"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$rootProject.compose_version"
+    implementation "androidx.hilt:hilt-navigation-compose:1.1.0-alpha01"
 
     implementation "com.google.dagger:hilt-android:$rootProject.hilt"
     kapt "com.google.dagger:hilt-compiler:$rootProject.hilt"
