--- a/uicomponents/build.gradle
+++ b/uicomponents/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.material:material:$rootProject.compose_material"
     implementation "io.coil-kt:coil-compose:$rootProject.coil"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 
     implementation "com.google.dagger:hilt-android:$rootProject.hilt"
     kapt "com.google.dagger:hilt-compiler:$rootProject.hilt"
