--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,7 +94,7 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-runtime-compose:$rootProject.lifecycle"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$rootProject.compose_version"
-    implementation "androidx.hilt:hilt-navigation-compose:1.1.0-alpha01"
+    implementation "androidx.hilt:hilt-navigation-compose:$rootProject.hilt_compose"
 
     implementation "com.google.dagger:hilt-android:$rootProject.hilt"
     kapt "com.google.dagger:hilt-compiler:$rootProject.hilt"
