--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ activity_compose = '1.7.0'
 compose_material = '1.4.0'
 androidx_core = '1.9.0'
 lifecycle = '2.3.1'
-excuseMe = '0.9.5'
+excuse_me = '0.9.5'
 hilt_compose = '1.1.0-alpha01'
 coroutines = '1.5.2'
 coil = '2.2.2'
@@ -20,16 +20,43 @@ compose_constraint = '1.0.1'
 compose_swipe = '1.1.1'
 room = '2.5.1'
 junit = '4.13.2'
-junitExt = '1.1.5'
+junit_ext = '1.1.5'
 espresso = '3.5.1'
 mockitoKotlin = '2.2.0'
 runner = '1.4.0'
 
 [libraries]
 # project classpath
-buildGradlePlugin = { module = "com.android.tools.build:gradle", version.ref = "build_gradle"}
-kotlinGradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin_gradle"}
-hilt-plugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "hilt"}
-benchmarkPlugin = { module = "androidx.benchmark:benchmark-gradle-plugin", version.ref = "benchmark"}
+buildGradlePlugin = { module = "com.android.tools.build:gradle", version.ref = "build_gradle" }
+kotlinGradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin_gradle" }
+hilt-plugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "hilt" }
+benchmarkPlugin = { module = "androidx.benchmark:benchmark-gradle-plugin", version.ref = "benchmark" }
 
 # project modules
+androidX-core = { module = "androidx.core:core-ktx", version.ref = "androidx_core" }
+androidX-lifecycle = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
+
+compose-activity = { module = "androidx.activity:activity-compose", version.ref = "activity_compose" }
+compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
+compose-constraint = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "compose_constraint" }
+compose-swipe = { module = "me.saket.swipe:swipe", version.ref = "compose_swipe" }
+compose-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
+compose-material = { module = "androidx.compose.material:material", version.ref = "compose" }
+compose-coil = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
+compose-lifecycle = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycle" }
+compose-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "compose" }
+compose-hiltNavigation = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hilt_compose" }
+compose-junit = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
+compose-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
+compose-testManifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose" }
+compose-destination = { module = "io.github.raamcosta.compose-destinations:core", version.ref = "navigation_compose" }
+compose-destination-ksp = { module = "io.github.raamcosta.compose-destinations:ksp", version.ref = "navigation_compose" }
+
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
+hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
+
+excuseMe = { module = "com.github.AraujoJordan:ExcuseMe", version.ref = "excuse_me" }
+
+junit = { module = "junit:junit", version.ref = "junit" }
+junit-ext = { module = "androidx.test.ext:junit", version.ref = "junit_ext" }
+espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
