--- a/features/note/build.gradle
+++ b/features/note/build.gradle
@@ -33,3 +33,30 @@ android {
         jvmTarget = "1.8"
     }
 }
+
+dependencies {
+    implementation libs.androidX.core
+    implementation libs.androidX.lifecycle
+
+    implementation libs.compose.activity
+    implementation libs.compose.ui
+    implementation libs.compose.constraint
+    implementation libs.compose.swipe
+    implementation libs.compose.tooling.preview
+    implementation libs.compose.material
+    implementation libs.compose.coil
+    implementation libs.compose.lifecycle
+    implementation libs.compose.viewmodel
+    implementation libs.compose.hiltNavigation
+
+    implementation libs.hilt.android
+    kapt libs.hilt.compiler
+    implementation libs.excuseMe
+
+    testImplementation libs.junit
+    androidTestImplementation libs.junit.ext
+    androidTestImplementation libs.espresso.core
+    androidTestImplementation libs.compose.junit
+    debugImplementation libs.compose.tooling
+    debugImplementation libs.compose.testManifest
+}
