--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -59,4 +59,9 @@ excuseMe = { module = "com.github.AraujoJordan:ExcuseMe", version.ref = "excuse_
 
 junit = { module = "junit:junit", version.ref = "junit" }
 junit-ext = { module = "androidx.test.ext:junit", version.ref = "junit_ext" }
+testRunner = { module = "androidx.test:runner", version.ref = "runner" }
 espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
+benchmark = { module = "androidx.benchmark:benchmark-junit4", version.ref = "benchmark" }
+
+room-ktx = { module = "androidx.room:room-ktx", version.ref ="room"}
+room-compiler = { module = "androidx.room:room-compiler", version.ref ="room"}
