Work on moving screens to modules

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     implementation libs.hilt.android
     kapt libs.hilt.compiler
 
+    implementation libs.androidX.lifecycle
+    implementation libs.androidX.lifecycle.viewmodel
+
     testImplementation libs.junit
     androidTestImplementation libs.junit.ext
     androidTestImplementation libs.espresso.core
