--- a/settings.gradle
+++ b/settings.gradle
@@ -21,10 +21,11 @@ include ':app'
 include ':core'
 include ':domain'
 include ':storage'
-include ':uicomponents'
 include ':benchmark'
 include ':features'
 include ':features:note'
-include ':playground'
 include ':features:editNote'
 include ':features:addNote'
+include ':playground'
+include ':uicomponents:note'
+include ':uicomponents:common'
