--- a/uicomponents/note/build.gradle
+++ b/uicomponents/note/build.gradle
@@ -1,10 +1,11 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
-    namespace 'com.mobile.pablo.note'
+    namespace 'com.mobile.pablo.uicomponents.note'
     compileSdk 33
 
     defaultConfig {
@@ -28,8 +29,37 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.4.4"
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
     api project('::uicomponents::common')
+
+    implementation libs.androidX.core
+    implementation libs.androidX.lifecycle
+
+    implementation libs.compose.activity
+    implementation libs.compose.ui
+    implementation libs.compose.constraint
+    implementation libs.compose.swipe
+    implementation libs.compose.tooling.preview
+    implementation libs.compose.material
+    implementation libs.compose.coil
+    implementation libs.compose.lifecycle
+    implementation libs.compose.viewmodel
+    implementation libs.compose.hiltNavigation
+
+    implementation libs.hilt.android
+    implementation project(path: ':domain')
+    kapt libs.hilt.compiler
 }
