--- a/features/editNote/build.gradle
+++ b/features/editNote/build.gradle
@@ -83,4 +83,5 @@ dependencies {
     debugImplementation libs.compose.testManifest
 
     implementation libs.compose.destination
+    ksp libs.compose.destination.ksp
 }
