--- a/features/addNote/build.gradle
+++ b/features/addNote/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'org.jetbrains.kotlin.android'
+    id 'dagger.hilt.android.plugin'
     id 'com.google.devtools.ksp' version '1.8.0-1.0.9'
 }
 
@@ -83,5 +84,4 @@ dependencies {
     debugImplementation libs.compose.testManifest
 
     implementation libs.compose.destination
-    ksp libs.compose.destination.ksp
 }
