--- a/features/note/build.gradle
+++ b/features/note/build.gradle
@@ -42,7 +42,8 @@ android {
 
 dependencies {
     implementation project('::domain')
-    implementation project('::features::addNote')
+    implementation project(':features:addNote')
+    implementation project(':features:editNote')
     implementation project('::uicomponents::note')
     implementation project('::uicomponents::common')
 
