--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ junit_ext = '1.1.5'
 espresso = '3.5.1'
 mockitoKotlin = '2.2.0'
 runner = '1.4.0'
+uiautomator = '2.3.0-alpha02'
 
 [libraries]
 # project classpath
@@ -62,6 +63,7 @@ excuseMe = { module = "com.github.AraujoJordan:ExcuseMe", version.ref = "excuse_
 junit = { module = "junit:junit", version.ref = "junit" }
 junit-ext = { module = "androidx.test.ext:junit", version.ref = "junit_ext" }
 testRunner = { module = "androidx.test:runner", version.ref = "runner" }
+uiautomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "uiautomator" }
 espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
 benchmark = { module = "androidx.benchmark:benchmark-junit4", version.ref = "benchmark" }
 
