--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,6 +26,7 @@ mockitoKotlin = '2.2.0'
 runner = '1.4.0'
 uiautomator = '2.3.0-alpha02'
 ktLint = '0.36.0'
+ktLint-reporter = '0.48.2'
 
 [libraries]
 # project classpath
@@ -57,7 +58,9 @@ compose-destination-ksp = { module = "io.github.raamcosta.compose-destinations:k
 
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
+
 ktLint = { module = "com.pinterest:ktlint", version.ref = "ktLint" }
+ktLint-reporter = { module = "com.pinterest.ktlint:ktlint-reporter-html", version.ref = "ktLint-reporter" }
 
 junit = { module = "junit:junit", version.ref = "junit" }
 junit-ext = { module = "androidx.test.ext:junit", version.ref = "junit_ext" }
