--- a/settings.gradle
+++ b/settings.gradle
@@ -21,7 +21,6 @@ include ":app"
 include ":core"
 include ":domain"
 include ":storage"
-include ":benchmark"
 include ":features"
 include ":features:note"
 include ":features:editNote"
@@ -29,3 +28,4 @@ include ":features:addNote"
 include ":playground"
 include ":uicomponents:note"
 include ":uicomponents:common"
+include ':benchmark'
