--- a/.github/workflows/aws-device-farm.yml
+++ b/.github/workflows/aws-device-farm.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install awscli
+        pip install awscliv2
     - name: Configure AWS CLI
       run: |
         aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
