--- a/.github/workflows/aws-device-farm.yml
+++ b/.github/workflows/aws-device-farm.yml
@@ -2,51 +2,77 @@ name: AWS Device Farm CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - main
 
 jobs:
-  device-farm-tests:
+  build_and_test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.x
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: 11
+          distribution: 'adopt'
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew assembleAndroidTest
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install awscliv2
-    - name: Configure AWS CLI
-      run: |
-        aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws configure set region ${{ secrets.AWS_REGION }}
-    - name: Run tests on AWS Device Farm
-      run: |
-        PROJECT_NAME="iOS Notes"
-        DEVICE_POOL="4 dev"
-        TEST_PACKAGE="com.mobile.pablo.iosnotes"
-        # Create a new run in AWS Device Farm
-        aws devicefarm create-upload --project-name $PROJECT_NAME --name app.apk --type ANDROID_APP > app_upload.json
-        aws devicefarm create-upload --project-name $PROJECT_NAME --name tests.zip --type INSTRUMENTATION_TEST_PACKAGE > test_upload.json
-        # Upload the app and test package
-        aws s3 cp app/build/outputs/apk/debug/app-debug.apk "$(jq -r '.upload.url' app_upload.json)"
-        aws s3 cp $TEST_PACKAGE "$(jq -r '.upload.url' test_upload.json)"
-        # Schedule the run
-        aws devicefarm schedule-run \
-          --project-arn arn:aws:devicefarm:us-west-2:406524570672:project:d0311d9b-a860-4ed8-b577-874d773a0afb \
-          --app-arn "$(jq -r '.upload.appArn' app_upload.json)" \
-          --device-pool-arn "$(aws devicefarm list-device-pools --query "devicePools[?name=='$DEVICE_POOL'].arn | [0]" --output text)" \
-          --name "GitHub Actions Run" \
-          --test "$(printf '{"type":"INSTRUMENTATION","testPackageArn":"%s"}' "$(jq -r '.upload.arn' test_upload.json)")"
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Build and run tests
+        run: ./gradlew build
+
+      - name: Zip test results
+        if: always()
+        run: zip -r test-results.zip ./app/build/outputs/androidTest-results/connected
+
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: test-results
+          path: test-results.zip
+
+  aws_device_farm:
+    needs: build_and_test
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install AWS CLI
+        run: pip install awscli
+
+      - name: Configure AWS CLI
+        run: aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }} && aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Upload APK to AWS Device Farm
+        run: |
+          export APK_PATH=$(find . -type f -name "*.apk" | grep "/release/" | head -n 1)
+          export UPLOAD_URL=$(aws devicefarm create-upload --project-arn ${{ secrets.AWS_DEVICE_FARM_PROJECT_ARN }} --name MyApp.apk --type ANDROID_APP | jq -r '.upload.url')
+          curl -T $APK_PATH $UPLOAD_URL
+
+      - name: Upload Espresso tests to AWS Device Farm
+        run: |
+          export TEST_APK_PATH=$(find . -type f -name "*-androidTest.apk" | head -n 1)
+          export UPLOAD_URL=$(aws devicefarm create-upload --project-arn ${{ secrets.AWS_DEVICE_FARM_PROJECT_ARN }} --name EspressoTests.apk --type ANDROID_ESPRESSO | jq -r '.upload.url')
+          curl -T $TEST_APK_PATH $UPLOAD_URL
+
+      - name: Schedule and run tests on AWS Device Farm
+        run: |
+          export DEVICE_POOL=$(aws devicefarm list-device-pools --arn ${{ secrets.AWS_DEVICE_FARM_PROJECT_ARN }} --type PRIVATE | jq -r '.devicePools[0].arn')
+          export SCHEDULE_RUN_RESULT=$(aws devicefarm schedule-run --project-arn ${{ secrets.AWS_DEVICE_FARM_PROJECT_ARN }} --app-arn ${{ secrets.AWS_DEVICE_FARM_APP_ARN }} --device-pool-arn $DEVICE_POOL --name "My GitHub CI Run" --test type=ANDROID_ESPRESSO,testPackageArn=${{ secrets.AWS_DEVICE_FARM_TEST_PACKAGE_ARN }}')
+          export SCHEDULED_RUN_ARN=$(echo $SCHEDULE_RUN_RESULT | jq -r '.run.arn')
+          echo
