--- a/settings.gradle
+++ b/settings.gradle
@@ -28,4 +28,4 @@ include ":features:addNote"
 include ":playground"
 include ":uicomponents:note"
 include ":uicomponents:common"
-include ':benchmark'
+include ':macrobenchmark'
