--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,6 +12,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Set up Firebase
+        uses: w9jds/firebase-action@master
+        with:
+          args: configure
+          secrets: |  ${{ secrets.GOOGLE_SERVICES_JSON }}
     - uses: actions/checkout@v3
     - name: set up JDK 11
       uses: actions/setup-java@v3
